<resources>
    <string name="app_name">TasksApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="tasks_fragment_label">Tasks Fragment</string>
    <string name="add_task_fragment">Add Task Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_task">Add Task</string>
    <string name="button_delete_task">Button delete task</string>
    <string name="deadline">Deadline:</string>
    <string name="task_done">%d%% Done</string>
    <string name="created_at">Created at:</string>
    <string name="domain">Domain</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="deadline_edit_date">Deadline Date</string>
    <string name="deadline_edit_time">Deadline Time</string>
    <string name="priority">Priority</string>
    <string name="deadline_date">Deadline Date</string>
    <string name="deadline_time">Deadline Time</string>
</resources>